refactor: authority 조회 기능 파라미터 변경 (#85)
- 컨트롤러 파라미터 변경
- 서비스 파라미터 변경
- 서비스 로직 변경